--- a/styles.css
+++ b/styles.css
@@ -164,7 +164,7 @@ border-radius: 10px;
 
 .greetings {
     font-size: 30px;
-    color: #a95e97;
+    color: #22061c;
     justify-content: center;
     width: 100%;
     padding: 10px;
