--- a/styles.css
+++ b/styles.css
@@ -163,6 +163,7 @@ border-radius: 10px;
 /*Contactanos*/
 
 .greetings {
+    font-family: "Lobster", sans-serif;
     font-size: 30px;
     color: #22061c;
     justify-content: center;
