--- a/styles.css
+++ b/styles.css
@@ -166,6 +166,7 @@ border-radius: 10px;
     font-family: "Lobster", sans-serif;
     font-size: 30px;
     color: #22061c;
+    color: #801d6b;
     justify-content: center;
     width: 100%;
     padding: 10px;
